attempt to fix broken css with those google fonts

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 html {
   font-size: 10px;
   margin: 0;
-  font-family: sans-serif;
+  font-family: "Intern", sans-serif;
 }
 
 body {
@@ -56,15 +56,16 @@ h2 {
   letter-spacing: 0.2rem;
 } */
 
-/* h1,h2{
-  font-family: "Inter" ,serif;
+h1,h2{
+  font-family: "Bricolage Grotesque", serif;
+  font-weight: 400;
   letter-spacing: 0.2rem;
-} */
+}
 
 p {
   font-size: 1.4rem;
   line-height: 1.6;
   word-spacing: 0.6rem;
   letter-spacing: 0.1rem;
-  font-family: "ostrich_sansmedium", serif;
+  font-family: "Intern", serif;
 }
